--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
         </a>
         <ul class="header-navigation">
-          <li class="info-current">Информация</li>
+          <li class="info-current"><a>Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
           <li><a class="catalog" href="catalog.html">Гостиницы</a></li>
@@ -26,7 +26,7 @@
   <main class="container">
     <div class="wrapper wrapper-header-color">
     <section class="main-title">
-      <img src="img/intro-welcome.svg" width="1200" height="509" alt="Заставка Седоны">
+      <img src="img/intro-welcome.svg" width="469" height="353" alt="Заставка Седоны">
     </section>
     <article class="about">
       <div class="box-title">
@@ -39,33 +39,33 @@
           <li class="reason-item">
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title">Настоящий городок</h3>
-              <span class="reason-item-number">- №1 -</span>
+              <p class="reason-item-number">- №1 -</p>
               <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             </div>
             <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <li>
-            <div class="reason-content">
-              <h2 class="visually-hidden">Сервис Седоны</h2>
+            <h2 class="visually-hidden">Сервис Седоны</h2>
               <ul class="reasons-content-list">
                 <li class="reason-content-item">
                   <div class="reason-item-white">
-                    <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
-                    <span class="reason-content-item-title-white">Жильё</span>
-                    <p class="reason-content-item-text-1">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                    <img class="reason-content-item-icon" src="img/icon-1.svg" alt="Жилье">
+                    <p class="reason-content-item-title-white">Жильё</p>
+                    <p class="reason-content-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                   </div>
                 </li>
                 <li class="reason-content-item">
                   <div class="reason-item-white">
-                    <img class="reason-content-item-icon" src="img/icon-3.svg" width="77" height="70" alt="Еда">
-                    <span class="reason-content-item-title-white">Еда</span>
+                    <img class="reason-content-item-icon" src="img/icon-3.svg" alt="Еда">
+                    <p class="reason-content-item-title-white">Еда</p>
                     <p class="reason-content-item-text-white">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
-                  </div>
                 </li>
                 <li class="reason-content-item">
-                  <img class="reason-content-item-icon" src="img/icon-2.svg" width="64" height="76" alt="Сувениры">
-                  <span class="reason-content-item-title-white">Сувениры</span>
-                  <p class="reason-content-item-text-white">Не только китайского, но и местного производства</p>
+                  <div class="reason-item-white">
+                    <img class="reason-content-item-icon" src="img/icon-2.svg" alt="Сувениры">
+                    <p class="reason-content-item-title-white">Сувениры</p>
+                    <p class="reason-content-item-text-white">Не только китайского, но и местного производства</p>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -78,7 +78,7 @@
               <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
           </li>
-          <div class="reasons-content">
+          <li class="reasons-content">
             <ul class="reasons-content-list">
               <li class="reason-content-item">
                 <div class="reason-item-gray">
@@ -86,23 +86,23 @@
                   <span class="reason-content-item-number">- №3 -</span>
                   <p class="reason-content-item-text">Все достопримечательности находятся очень близко</p>
                 </div>
-                </li>
-                <li class="reason-content-item">
-                  <div class="reason-item-gray">
-                    <h3 class="reason-content-item-title">Красивая дорога</h3>
-                    <span class="reason-content-item-number">- №4 -</span>
-                    <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                  </div>
-                </li>
-                <li class="reason-content-item">
-                  <div class="reason-item-gray">
-                    <h3 class="reason-content-item-title">Мало туристов</h3>
-                    <span class="reason-content-item-number">- №5 -</span>
-                    <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
-                  </div>
-                </li>
-              </ul>
-          </div>
+              </li>
+              <li class="reason-content-item">
+                <div class="reason-item-gray">
+                  <h3 class="reason-content-item-title">Красивая дорога</h3>
+                  <span class="reason-content-item-number">- №4 -</span>
+                  <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
+              </li>
+              <li class="reason-content-item">
+                <div class="reason-item-gray">
+                  <h3 class="reason-content-item-title">Мало туристов</h3>
+                  <span class="reason-content-item-number">- №5 -</span>
+                  <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
+                </div>
+              </li>
+            </ul>
+          </li>
         </ol>
       </section>
     </article>
@@ -121,7 +121,7 @@
           <p class="order-date">
             <label class="order-title" for="appointment-data">Дата заезда:</label>
             <input class="order-text" type="text" id="appointment-data" name="date" placeholder="24 апреля 2017">
-            <buttom class="order-botton-calendar" type="button"><img src="img/calendar.svg" alt="Календарь"></button>
+            <buttom class="order-botton-calendar"><img src="img/calendar.svg" alt="Календарь"></button>
           </p>
           <p class="order-date">
             <label class="order-title" for="departure-data">Дата выезда:</label>
@@ -146,26 +146,24 @@
   </main>
   <footer class="main-footer">
     <div class="wrapper wrapper-header-color">
-      <div class="footer-container">
-        <div class="footer-contacts">
-          <p class="footer-text footer-hashtag">#Visitsedona</p>
-          <p class="footer-text footer-phone">Тел:
-            <a href="tel:+74956660266">+7(495)666-02-66</a>
-          </p>
-        </div>
-        <ul class="footer-social">
-          <li><a class="social-button social-tw" href=""></a></li>
-          <li><a class="social-button social-fb" href=""></a></li>
-          <li><a class="social-button social-you" href=""></a></li>
-        </ul>
+      <div class="footer-contacts">
+        <p class="footer-text footer-hashtag">#Visitsedona</p>
+        <p class="footer-text footer-phone">Тел:
+          <a href="tel:+74956660266">+7(495)666-02-66</a>
+        </p>
       </div>
-      <p class="footer-copyright">
-        Website by
-        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-        </a>
-      </p>
+      <ul class="footer-social">
+        <li><a class="social-button social-tw" href=""></a></li>
+        <li><a class="social-button social-fb" href=""></a></li>
+        <li><a class="social-button social-you" href=""></a></li>
+      </ul>
     </div>
-    </footer>
-  </body>
+    <p class="footer-copyright">
+      Website by
+      <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="118" height="38" alt="Логотип HTML Academy">
+      </a>
+    </p>
+  </footer>
+</body>
 </html>
