--- a/catalog.html
+++ b/catalog.html
@@ -165,26 +165,24 @@
     </main>
     <footer class="main-footer">
       <div class="wrapper wrapper-header-color">
-        <div class="footer-container">
-          <div class="footer-contacts">
-            <p class="footer-text footer-hashtag">#Visitsedona</p>
-            <p class="footer-text footer-phone">Тел:
-              <a href="tel:+74956660266">+7(495)666-02-66</a>
-            </p>
-          </div>
-          <ul class="footer-social">
-            <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-            <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-            <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-          </ul>
+        <div class="footer-contacts">
+          <p class="footer-text footer-hashtag">#Visitsedona</p>
+          <p class="footer-text footer-phone">Тел:
+            <a href="tel:+74956660266">+7(495)666-02-66</a>
+          </p>
         </div>
-        <p class="footer-copyright">
-          Website by
-          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-          </a>
-        </p>
+        <ul class="footer-social">
+          <li><a class="social-button social-tw" href=""></a></li>
+          <li><a class="social-button social-fb" href=""></a></li>
+          <li><a class="social-button social-you" href=""></a></li>
+        </ul>
       </div>
-      </footer>
-    </body>
+      <p class="footer-copyright">
+        Website by
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="118" height="38" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </footer>
+  </body>
   </html>
