--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title">Настоящий городок</h3>
               <p class="reason-item-number">- №1 -</p>
-              <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
+              <p class="reason-item-text-blue-1">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             </div>
             <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <li>
-            <h2 class="visually-hidden">Сервис Седоны</h2>
+            <div class="reason-content">
+              <h2 class="visually-hidden">Сервис Седоны</h2>
               <ul class="reasons-content-list">
                 <li class="reason-content-item">
                   <div class="reason-item-white">
@@ -58,13 +59,14 @@
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-3.svg" alt="Еда">
                     <p class="reason-content-item-title-white">Еда</p>
-                    <p class="reason-content-item-text-white">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                    <p class="reason-content-item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  </div>
                 </li>
                 <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-2.svg" alt="Сувениры">
                     <p class="reason-content-item-title-white">Сувениры</p>
-                    <p class="reason-content-item-text-white">Не только китайского, но и местного производства</p>
+                    <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
                   </div>
                 </li>
               </ul>
@@ -74,8 +76,8 @@
             <img class="reason-item-image" src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title"> Там есть<br>мост дьявола</p></h3>
-              <span class="reason-item-number">- №2 -</span>
-              <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              <p class="reason-item-number">- №2 -</p>
+              <p class="reason-item-text-blue-2">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
           </li>
           <li class="reasons-content">
@@ -83,22 +85,22 @@
               <li class="reason-content-item">
                 <div class="reason-item-gray">
                   <h3 class="reason-content-item-title">Небольшая площадь</h3>
-                  <span class="reason-content-item-number">- №3 -</span>
-                  <p class="reason-content-item-text">Все достопримечательности находятся очень близко</p>
+                  <p class="reason-item-number">- №3 -</p>
+                  <p class="reason-content-item-text-gray">Все достопримечательности находятся очень близко</p>
                 </div>
               </li>
               <li class="reason-content-item">
                 <div class="reason-item-gray">
                   <h3 class="reason-content-item-title">Красивая дорога</h3>
-                  <span class="reason-content-item-number">- №4 -</span>
-                  <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                  <p class="reason-item-number">- №4 -</p>
+                  <p class="reason-content-item-text-gray">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </div>
               </li>
               <li class="reason-content-item">
                 <div class="reason-item-gray">
                   <h3 class="reason-content-item-title">Мало туристов</h3>
-                  <span class="reason-content-item-number">- №5 -</span>
-                  <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
+                  <p class="reason-item-number">- №5 -</p>
+                  <p class="reason-content-item-text-gray">Большинство едет в Гранд Коньон и толпится там</p>
                 </div>
               </li>
             </ul>
