--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
           <li><a class="header-navigation-info" href="index.html">Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
-          <li><a class="info-current">Гостиницы</a></li>
+          <li class="info-current"><a>Гостиницы</a></li>
         </ul>
       </nav>
     </div>
@@ -116,7 +116,9 @@
               </div>
               <div class="catalog-item-block3">
                 <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-                <span class="catalog-item-rating">Рейтинг: 8,5</span>
+                <div class="border-rating">
+                  <span class="catalog-item-rating">Рейтинг: 8,5</span>
+                </div>
               </div>
             </li>
           </div>
@@ -136,7 +138,9 @@
               </div>
               <div class="catalog-item-block3">
                 <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-                <span class="catalog-item-rating">Рейтинг: 8,9</span>
+                <div class="border-rating">
+                  <span class="catalog-item-rating">Рейтинг: 8,9</span>
+                </div>
               </div>
             </li>
           </div>
@@ -156,7 +160,9 @@
               </div>
               <div class="catalog-item-block3">
                 <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-                <span class="catalog-item-rating">Рейтинг: 9,2</span>
+                <div class="border-rating">
+                  <span class="catalog-item-rating">Рейтинг: 9,2</span>
+                </div>
               </div>
             </li>
           </div>
