--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <ol class="reasons-list">
           <li class="reason-item">
             <div class="reason-item-blue">
-              <h3 class="reason-content-item-title">Настоящий городок</h3>
-              <p class="reason-item-number">- №1 -</p>
+              <h3 class="reason-content-item-title-blue">Настоящий городок</h3>
+              <p class="reason-item-number-blue">- №1 -</p>
               <p class="reason-item-text-blue-1">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             </div>
             <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
@@ -75,7 +75,7 @@
           <li class="reason-item">
             <img class="reason-item-image" src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <div class="reason-item-blue">
-              <h3 class="reason-content-item-title"> Там есть<br>мост дьявола</p></h3>
+              <h3 class="reason-content-item-title-blue"> Там есть<br>мост дьявола</p></h3>
               <p class="reason-item-number">- №2 -</p>
               <p class="reason-item-text-blue-2">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
