--- a/catalog.html
+++ b/catalog.html
@@ -24,84 +24,83 @@
     </div>
   </header>
   <main class="container">
-    <section class="filter">
-      <h2 class="visually-hidden">Фильтр отелей</h2>
-      <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <div class="filter-columns">
-            <div class="filter-column1">
-              <legend class="filter-title">Инфраструктура:</legend>
-              <ul class="filter-list">
-                <li class="filter-item">
-                  <label class="filter-item-title" for="basin">Бассейн</label>
-                  <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
-                </li>
-                <li class="filter-item">
-                  <label for="parking">Парковка></label>
-                  <input type="checkbox" id="parking" name="parking">
-                </li>
-                <li class="filter-item">
-                  <label for="wi-fi">WI-FI</label>
-                  <input type="checkbox" id="wi-fi" name="wi-fi">
-                </li>
-              </ul>
-            </div>
-            <div class="filter-column2">
-              <legend class="filter-title">Тип жилья:</legend>
-              <ul class="filter-list">
-                <li class="filter-hotel">
-                  <label for="hotel">Гостиница</label>
-                  <input type="checkbox" id="hotel" name="hotel" checked>
-                </li>
-                <li class="filter-hotel">
-                  <label for="motel">Мотель</label>
-                  <input type="checkbox" id="motel" name="motel" checked>
-                </li>
-                <li class="filter-hotel">
-                  <label for="apartment">Аппартаменты</label>
-                  <input type="checkbox" id="apartment" name="apartment" checked>
-                </li>
-              </ul>
-            </div>
-            <div class="filter-column3">
-              <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
-              <button class="filter-button" type="submit">Показать</button>
-            </div>
-          </div>
-        </fieldset>
-      </form>
-    </section>
-      <section class="result">
-        <div class="wrapper wrapper-header-color">
-          <div class="container-result"
-            <h3 class="result-count">Найдено: 3</h3>
-            <span class="result-sort">Сортировка:</span>
-            <ul class="sort-list">
-              <li class="sort-item">
-                <span class="sort-item-current">По цене</span>
-              </li>
-              <li class="sort-item-dotted">
-                <a href="">По типу</a>
-              </li>
-              <li class="sort-item-dotted">
-                <a href="">По рейтингу</a>
-              </li>
-              <li>
-                <div class="item-icon">
-                  <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
-                  <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
+    <div class="wrapper wrapper-header-color">
+      <section class="filter">
+        <div class="wrapper">
+          <div class= "box-filter">
+            <h2 class="visually-hidden">Фильтр отелей</h2>
+            <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
+              <fieldset>
+                <div class="filter-columns">
+                  <div class="filter-column1">
+                    <legend class="filter-title">Инфраструктура:</legend>
+                    <ul class="filter-list">
+                      <li class="filter-item">
+                        <label class="filter-item-title" for="basin">Бассейн</label>
+                        <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
+                      </li>
+                      <li class="filter-item">
+                        <label for="parking">Парковка></label>
+                        <input type="checkbox" id="parking" name="parking">
+                      </li>
+                      <li class="filter-item">
+                        <label for="wi-fi">WI-FI</label>
+                        <input type="checkbox" id="wi-fi" name="wi-fi">
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="filter-column2">
+                    <legend class="filter-title">Тип жилья:</legend>
+                    <ul class="filter-list">
+                      <li class="filter-hotel">
+                        <label for="hotel">Гостиница</label>
+                        <input type="checkbox" id="hotel" name="hotel" checked>
+                      </li>
+                        <label for="motel">Мотель</label>
+                        <input type="checkbox" id="motel" name="motel" checked>
+                      </li>
+                      <li class="filter-hotel">
+                        <label for="apartment">Аппартаменты</label>
+                        <input type="checkbox" id="apartment" name="apartment" checked>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="filter-column3">
+                    <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
+                    <button class="filter-button" type="submit">Показать</button>
+                  </div>
                 </div>
-              </li>
-            </ul>
+              </fieldset>
+            </form>
           </div>
         </div>
       </section>
-    </div>
-    <section class="catalog">
+      <section class="result">
+        <div class="container-result">
+          <h3 class="result-count">Найдено: 3</h3>
+          <span class="result-sort">Сортировка:</span>
+          <ul class="sort-list">
+            <li class="sort-item">
+              <span class="sort-item-current">По цене</span>
+            </li>
+            <li class="sort-item-dotted">
+              <a href="">По типу</a>
+            </li>
+            <li class="sort-item-dotted">
+              <a href="">По рейтингу</a>
+            </li>
+          </ul>
+          <div class="item-icon">
+            <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
+            <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
+          </div>
+        </div>
+      </section>
+      <section class="catalog">
         <h2 class="visually-hidden">Список отелей</h2>
-        <div class="wrapper wrapper-header-color">
-          <ul class="catalog-list">
-            <li class="catalog-item">
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <div class="wrapper-catalog">
               <div class="catalog-item-block1">
                 <a href="">
                   <img class="catalog-item-img" src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
@@ -109,21 +108,23 @@
               </div>
               <div class="catalog-item-block2">
                 <h3 class="catalog-item-title">Amara Resort & spa</h3>
-                <span class="catalog-item-type">Гостиница</span>
+                <span class="catalog-category">Гостиница</span>
                 <span class="catalog-item-price">От 4000 р.</span>
                 <a class="catalog-item-button-detail" href="">Подробнее</a>
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box">
+                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 8,5</span>
                 </div>
               </div>
-            </li>
-          </div>
-          <div class="wrapper wrapper-header-color">
-            <li class="catalog-item">
+            </div>
+          </li>
+          <li class="catalog-item">
+            <div class="wrapper-catalog">
               <div class="catalog-item-block1">
                 <a href="">
                   <img class="catalog-item-img" src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
@@ -137,15 +138,17 @@
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box">
+                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 8,9</span>
                 </div>
               </div>
-            </li>
-          </div>
-          <div class="wrapper wrapper-header-color">
-            <li class="catalog-item">
+            </div>
+          </li>
+          <li class="catalog-item">
+            <div class="wrapper-catalog">
               <div class="catalog-item-block1">
                 <a href="">
                   <img class="catalog-item-img" src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
@@ -159,36 +162,39 @@
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box">
+                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 9,2</span>
                 </div>
               </div>
-            </li>
-          </div>
+            </div>
+          </li>
         </ul>
       </section>
-    </main>
-    <footer class="main-footer">
-      <div class="wrapper wrapper-header-color">
-        <div class="footer-contacts">
-          <p class="footer-text footer-hashtag">#Visitsedona</p>
-          <p class="footer-text footer-phone">Тел:
-            <a href="tel:+74956660266">+7(495)666-02-66</a>
-          </p>
-        </div>
-        <ul class="footer-social">
-          <li><a class="social-button social-tw" href=""></a></li>
-          <li><a class="social-button social-fb" href=""></a></li>
-          <li><a class="social-button social-you" href=""></a></li>
-        </ul>
+    </div>
+  </main>
+  <footer class="main-footer">
+    <div class="wrapper wrapper-header-color">
+      <div class="footer-contacts">
+        <p class="footer-text footer-hashtag">#Visitsedona</p>
+        <p class="footer-text footer-phone">Тел:
+          <a href="tel:+74956660266">+7(495)666-02-66</a>
+        </p>
       </div>
+      <ul class="footer-social">
+        <li><a class="social-button social-tw" href=""></a></li>
+        <li><a class="social-button social-fb" href=""></a></li>
+        <li><a class="social-button social-you" href=""></a></li>
+      </ul>
       <p class="footer-copyright">
         Website by
         <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="118" height="38" alt="Логотип HTML Academy">
         </a>
       </p>
-    </footer>
-  </body>
-  </html>
+    </div>
+  </footer>
+</body>
+</html>
