--- a/catalog.html
+++ b/catalog.html
@@ -56,6 +56,7 @@
                         <label for="hotel">Гостиница</label>
                         <input type="checkbox" id="hotel" name="hotel" checked>
                       </li>
+                      <li>
                         <label for="motel">Мотель</label>
                         <input type="checkbox" id="motel" name="motel" checked>
                       </li>
@@ -91,8 +92,8 @@
             </li>
           </ul>
           <div class="item-icon">
-            <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
-            <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
+            <a href=""><img class="sort-item-icon-1" src="img/icon-down-dir.svg" width="11" height="10"></a>
+            <a href=""><img class="sort-item-icon-2" src="img/icon-up-dir.svg" width="11" height="10"></a>
           </div>
         </div>
       </section>
