--- a/catalog.html
+++ b/catalog.html
@@ -36,33 +36,33 @@
                     <legend class="filter-title">Инфраструктура:</legend>
                     <ul class="filter-list">
                       <li class="filter-item">
-                        <label class="filter-item-title" for="basin">Бассейн</label>
                         <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
+                        <label class="filter-item-title" for="basin">Бассейн</label>
                       </li>
                       <li class="filter-item">
-                        <label for="parking">Парковка></label>
                         <input type="checkbox" id="parking" name="parking">
+                        <label for="parking">Парковка</label>
                       </li>
                       <li class="filter-item">
-                        <label for="wi-fi">WI-FI</label>
                         <input type="checkbox" id="wi-fi" name="wi-fi">
+                        <label for="wi-fi">WI-FI</label>
                       </li>
                     </ul>
                   </div>
                   <div class="filter-column-2">
                     <legend class="filter-title">Тип жилья:</legend>
                     <ul class="filter-list">
-                      <li class="filter-hotel">
-                        <label for="hotel">Гостиница</label>
+                      <li class="filter-item">
                         <input type="checkbox" id="hotel" name="hotel" checked>
+                        <label for="hotel">Гостиница</label>
                       </li>
-                      <li>
-                        <label for="motel">Мотель</label>
+                      <li class="filter-item">
                         <input type="checkbox" id="motel" name="motel" checked>
+                        <label for="motel">Мотель</label>
                       </li>
-                      <li class="filter-hotel">
-                        <label for="apartment">Аппартаменты</label>
+                      <li class="filter-item">
                         <input type="checkbox" id="apartment" name="apartment" checked>
+                        <label for="apartment">Аппартаменты</label>
                       </li>
                     </ul>
                   </div>
@@ -92,8 +92,8 @@
             </li>
           </ul>
           <div class="item-icon">
-            <a href=""><img class="sort-item-icon-1" src="img/icon-down-dir.svg" width="11" height="10"></a>
-            <a href=""><img class="sort-item-icon-2" src="img/icon-up-dir.svg" width="11" height="10"></a>
+            <a class="sort-item-icon-1" href=""><svg  xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a>
+            <a class="sort-item-icon-2" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg></a>
           </div>
         </div>
       </section>
@@ -115,8 +115,8 @@
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <div class="icon-box">
-                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box icon-box-4star">
+                  <span class="visually-hidden">4 звезды</span>
                 </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 8,5</span>
@@ -139,8 +139,8 @@
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <div class="icon-box">
-                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box icon-box-3star">
+                  <span class="visually-hidden">3 звезды</span>
                 </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 8,9</span>
@@ -163,8 +163,8 @@
                 <a class="catalog-item-button" href="">Забронировать</a>
               </div>
               <div class="catalog-item-block3">
-                <div class="icon-box">
-                  <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+                <div class="icon-box icon-box-2star">
+                  <span class="visually-hidden">2 звезды</span>
                 </div>
                 <div class="border-rating">
                   <span class="catalog-item-rating">Рейтинг: 9,2</span>
