--- a/index.html
+++ b/index.html
@@ -112,36 +112,44 @@
         <div class="container">
           <h2 class="order-question-title">Заинтересовались?</h2>
           <p class="order-question-text">Укажите предполагаемые даты поездки,<br> и мы покажем лучшие предложения гостиниц в Седоне</p>
-          <button class="order-question-bottom" type="button">Поиск гостиницы в Седоне</button>
+          <button class="order-question-button" type="button">Поиск гостиницы в Седоне</button>
         </div>
         <div class="order-container">
           <h2 class="visually-hidden">Забронировать отель</h2>
           <img class="order-image" src="img/map.png" width="1200" height="475" alt="Седона на Карте">
-        </div>
-        <div class="form-container">
-          <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
-            <p class="order-date">
-              <label class="order-title" for="appointment-data">Дата заезда:</label>
-              <input class="order-text" type="text" id="appointment-data" name="date" placeholder="24 апреля 2017">
-              <buttom class="order-botton-calendar"><img src="img/calendar.svg" alt="Календарь"></button>
-            </p>
-            <p class="order-date">
-              <label class="order-title" for="departure-data">Дата выезда:</label>
-              <input class="order-text" type="text" id="departure-data" name="date" placeholder="4 июля 2017">
-              <buttom class="order-botton-calendar"><img src="img/calendar.svg" alt="Календарь"></button>
-            </p>
-            <div class="order-people">
-              <label class="order-title" for="adults">Взрослые:</label>
-              <button class="order-botton-edit" type="button">-</button>
-              <input class="order-count-value" type="number" id="adults" value="2">
-              <button class="order-botton-edit" type="button">+</button>
-              <label class="order-title" for="child">Дети:</label>
-              <button class="order-botton-edit" type="button">-</button>
-              <input class="order-count-value" type="number" id="child" value="0">
-              <button class="order-botton-edit" type="button">+</button>
-            </div>
-            <button class="order-button" type="submit">Найти</button>
-          </form>
+          <div class="form-container">
+            <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
+              <p class="order-date">
+                <label class="order-title" for="appointment-data">Дата заезда:</label>
+                <input class="order-text" type="text" id="appointment-data" name="date" placeholder="24 апреля 2017">
+                <buttom class="order-button-calendar"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg></button>
+              </p>
+              <p class="order-date">
+                <label class="order-title" for="departure-data">Дата выезда:</label>
+                <input class="order-text" type="text" id="departure-data" name="date" placeholder="4 июля 2017">
+                <buttom class="order-button-calendar"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg></button>
+              </p>
+              <div class="order-people">
+                <div class="order-wrap">
+                  <label class="order-title" for="adults">Взрослые:</label>
+                  <div class="order-flex">
+                    <button class="order-button-edit" type="button">-</button>
+                    <input class="order-count-value" type="text" id="adults" value="2">
+                    <button class="order-button-edit" type="button">+</button>
+                  </div>
+                </div>
+                <div class="order-wrap order-wrap-child">
+                  <label class="order-title" for="child">Дети:</label>
+                  <div class="order-flex">
+                    <button class="order-button-edit" type="button">-</button>
+                    <input class="order-count-value" type="text" id="child" value="0">
+                    <button class="order-button-edit" type="button">+</button>
+                  </div>
+                </div>
+              </div>
+              <button class="order-button" type="submit">Найти</button>
+            </form>
+          </div>
         </div>
       </section>
     </div>
