--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
                 <div class="order-wrap">
                   <label class="order-title" for="adults">Взрослые:</label>
                   <div class="order-flex">
-                    <button class="order-button-edit" type="button">-</button>
+                    <button class="order-button-edit" type="button"></button>
                     <input class="order-count-value" type="text" id="adults" value="2">
-                    <button class="order-button-edit" type="button">+</button>
+                    <button class="order-button-edit-plus" type="button"></button>
                   </div>
                 </div>
                 <div class="order-wrap order-wrap-child">
                   <label class="order-title" for="child">Дети:</label>
                   <div class="order-flex">
-                    <button class="order-button-edit" type="button">-</button>
+                    <button class="order-button-edit" type="button"></button>
                     <input class="order-count-value" type="text" id="child" value="0">
-                    <button class="order-button-edit" type="button">+</button>
+                    <button class="order-button-edit-plus" type="button"></button>
                   </div>
                 </div>
               </div>
