--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="order-flex">
                     <button class="order-button-edit" type="button"></button>
                     <input class="order-count-value" type="text" id="adults" value="2">
-                    <button class="order-button-edit-plus" type="button"></button>
+                    <button class="order-button-edit order-button-edit-plus" type="button"></button>
                   </div>
                 </div>
                 <div class="order-wrap order-wrap-child">
@@ -143,7 +143,7 @@
                   <div class="order-flex">
                     <button class="order-button-edit" type="button"></button>
                     <input class="order-count-value" type="text" id="child" value="0">
-                    <button class="order-button-edit-plus" type="button"></button>
+                    <button class="order-button-edit order-button-edit-plus" type="button"></button>
                   </div>
                 </div>
               </div>
