--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
           </ul>
           <div class="item-icon">
             <a class="sort-item-icon-1" href=""><svg  xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></a>
-            <a class="sort-item-icon-2" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a>
+            <a class="sort-item-icon-2 current" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a>
           </div>
         </div>
       </section>
