--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="wrapper wrapper-header-color">
       <section class="main-title">
         <img src="img/intro-welcome.svg" width="469" height="353" alt="Заставка Седоны">
+        <div class="mask"></div>
       </section>
       <article class="about">
         <div class="box-title">
