--- a/catalog.html
+++ b/catalog.html
@@ -36,15 +36,15 @@
                     <legend class="filter-title">Инфраструктура:</legend>
                     <ul class="filter-list">
                       <li class="filter-item">
-                        <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
-                        <label class="filter-item-title" for="basin">Бассейн</label>
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="basin" name="basin" checked>
+                        <label for="basin">Бассейн</label>
                       </li>
                       <li class="filter-item">
-                        <input type="checkbox" id="parking" name="parking">
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="parking" name="parking">
                         <label for="parking">Парковка</label>
                       </li>
                       <li class="filter-item">
-                        <input type="checkbox" id="wi-fi" name="wi-fi">
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="wi-fi" name="wi-fi">
                         <label for="wi-fi">WI-FI</label>
                       </li>
                     </ul>
@@ -53,21 +53,21 @@
                     <legend class="filter-title">Тип жилья:</legend>
                     <ul class="filter-list">
                       <li class="filter-item">
-                        <input type="checkbox" id="hotel" name="hotel" checked>
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="hotel" name="hotel" checked>
                         <label for="hotel">Гостиница</label>
                       </li>
                       <li class="filter-item">
-                        <input type="checkbox" id="motel" name="motel" checked>
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="motel" name="motel" checked>
                         <label for="motel">Мотель</label>
                       </li>
                       <li class="filter-item">
-                        <input type="checkbox" id="apartment" name="apartment" checked>
+                        <input class="filter-item filter-input-checkbox" type="checkbox" id="apartment" name="apartment" checked>
                         <label for="apartment">Аппартаменты</label>
                       </li>
                     </ul>
                   </div>
                   <div class="filter-column-3">
-                    <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
+                    <legend class="filter-title column-3">Стоимость услуги в сутки (Р):</legend>
                     <div class="filter-price">
                       <label class="min-price">от <input type="number" name="min-price" value="0"></label>
                       <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
