--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
               <fieldset>
                 <div class="filter-columns">
                   <div class="filter-column-1">
-                    <legend class="filter-title">Инфраструктура:</legend>
+                    <b class="filter-title">Инфраструктура:</b>
                     <ul class="filter-list">
                       <li class="filter-item">
                         <input class="filter-item filter-input-checkbox" type="checkbox" id="basin" name="basin" checked>
@@ -50,7 +50,7 @@
                     </ul>
                   </div>
                   <div class="filter-column-2">
-                    <legend class="filter-title">Тип жилья:</legend>
+                    <b class="filter-title">Тип жилья:</b>
                     <ul class="filter-list">
                       <li class="filter-item">
                         <input class="filter-item filter-input-checkbox" type="checkbox" id="hotel" name="hotel" checked>
@@ -67,10 +67,10 @@
                     </ul>
                   </div>
                   <div class="filter-column-3">
-                    <legend class="filter-title column-3">Стоимость услуги в сутки (Р):</legend>
+                    <b class="filter-title column-3">Стоимость услуги в сутки (Р):</b>
                     <div class="filter-price">
-                      <label class="min-price">от <input type="number" name="min-price" value="0"></label>
-                      <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
+                      <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+                      <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
                     </div>
                     <div class="filter-range">
                       <div class="scale">
