--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
         </a>
         <ul class="header-navigation">
-          <li class="info-current"><a>Информация</a></li>
+          <li><a>Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
           <li><a class="catalog" href="catalog.html">Гостиницы</a></li>
@@ -117,7 +117,7 @@
         </div>
         <div class="order-container">
           <h2 class="visually-hidden">Забронировать отель</h2>
-          <img class="order-image" src="img/map.png" width="1200" height="475" alt="Седона на Карте"/>
+          <img class="order-image" src="img/map.png" width="1200" height="594" alt="Седона на Карте"/>
           <div class="form-container">
             <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
               <p class="order-date">
@@ -155,7 +155,7 @@
       </section>
     </div>
   </main>
-  <footer class="main-footer">
+  <footer class="main-footer main-footer-index">
     <div class="wrapper wrapper-header-color wrapper-footer-shadow">
       <div class="footer-contacts">
         <p class="footer-text footer-hashtag">#Visitsedona</p>
