Проверка анимации формы

--- a/catalog.html
+++ b/catalog.html
@@ -35,11 +35,11 @@
                   <b class="filter-title">Инфраструктура:</b>
                   <ul class="filter-list">
                     <li class="filter-item">
-                      <input class="filter-item filter-input-checkbox" disabled type="checkbox" id="basin" name="basin" checked>
+                      <input class="filter-item filter-input-checkbox" type="checkbox" id="basin" name="basin" checked>
                       <label for="basin">Бассейн</label>
                     </li>
                     <li class="filter-item">
-                      <input class="filter-item filter-input-checkbox" disabled type="checkbox" id="parking" name="parking">
+                      <input class="filter-item filter-input-checkbox" type="checkbox" id="parking" name="parking">
                       <label for="parking">Парковка</label>
                     </li>
                     <li class="filter-item">
