Основные правки проверящего внесла

--- a/catalog.html
+++ b/catalog.html
@@ -75,8 +75,8 @@
                     <div class="scale">
                       <div class="bar"></div>
                     </div>
-                    <div class="range-toggle range-toggle-min"></div>
-                    <div class="range-toggle range-toggle-max"></div>
+                    <div class="range-toggle range-toggle-min" aria-label="toggle-min"></div>
+                    <div class="range-toggle range-toggle-max" aria-label="toggle-max"></div>
                   </div>
                   <button class="filter-button" type="submit">Показать</button>
                 </div>
@@ -101,8 +101,8 @@
             </li>
           </ul>
           <div class="item-icon">
-            <a class="sort-item-icon-1" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></a>
-            <a class="sort-item-icon-2 current" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a>
+            <a class="sort-item-icon-1" aria-label="arrow" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></a>
+            <a class="sort-item-icon-2 current" aria-label="arrow" href=""><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a>
           </div>
         </div>
       </section>
