--- a/catalog.html
+++ b/catalog.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <title>HTML Academy:Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
-  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +15,7 @@
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
         </a>
         <ul class="header-navigation">
-          <li><a class="header-navigation-info" href="index.html">Информация</a></li>
+          <li><a class="header-navigation-info" href="info.html">Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
           <li class="info-current"><a>Гостиницы</a></li>
